@@ -9,6 +9,7 @@ Changelog: December 8, 2011
 * Added 'desk-mess-mirrored' loop template
 * Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
 * Added post-formats: aside, quote, and status
+* Added 'Order of Contents' reference to the stylesheet with minor re-organization
 * Changed `BNS Theme Version` to `DMM Theme Version` with extensive re-writes to text displayed
 * Changed `my_theme_data` to `active_theme_data` in `DMM Theme Version`
 * Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
